--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,8 @@
-language: Java
+language: java
+jdk:
+ - oraclejdk8
+deploy:
+ provider: heroku
+ api-key: 
+  secure: $HEROKU_API_KEY
+ app: lippep-spring-boot-test
